# Krypton

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README (2).md  README.md  configure.ac  configure~
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  workflows.yml
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build_msvc/: README.md
contrib/: README.md  gitian-build.py  install_db4.sh
depends/: README.md  description.md
doc/: JSON-RPC-interface.md  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  krypton-conf.md  productivity.md  psbt.md  reduce-traffic.md  release-notes-krypton.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  krypton-cli.1  krypton-qt.1  krypton-tx.1  krypton-wallet.1  kryptond.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  fs.cpp  httpserver.cpp  init.cpp  net.cpp  net_processing.cpp  net_processing.h  netaddress.cpp  pow.cpp  pow.h  txdb.cpp  validation.cpp
test/: README.md
(+262 files in other folders)
