dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=kryptond.1
endif

if ENABLE_QT
  dist_man1_MANS+=krypton-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=krypton-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=krypton-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=krypton-wallet.1
endif
endif
